[package]
name = "docker-intrude"
version = "1.0.2-dev"
edition = "2024"

[dependencies]
nix = { version = "0.31.3", features = ["sched", "process", "user", "signal"] }
caps = "0.5.6"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true